--- a/src/App.css
+++ b/src/App.css
@@ -32,25 +32,32 @@ body{
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-
-
 .testi{
   margin-top: 5%;
   margin-left: 0%;
   width: 90%;
 }
 
-.home{
-  margin-top: 0%;
+h1{
+  margin-top: 110%;
+  padding: 20px;
+}
+
+.pic{
+  white-space: 100px;
+  padding: 5%;
+}
+
+.thriller{
+  width: 440px;
+  white-space: 100%;
+  margin: auto;
+}
+
+.hipster{
+  padding-right: 10%;
+  width: 200;
+  white-space: 200px;
 }
 
 .nav{
