--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,47 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Montserrat', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+.body{
+  height: 100vh !important;
+  width: 100% !important;
+  color: white !important;
+  background-color: #418ba2 !important;
+}
+.title{
+  text-align: center;
+}
+.errors{
+  text-align: center;
+  color: red;
+}
+.form-control{
+  border-radius: 5px !important;
+  background-color: #418ba2 !important;
+  color:white !important;
+}
+.form-check-input{
+  background-color: #418ba2 !important;
+}
+label{
+  color:#99bccc !important;
+}
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+a{
+  text-decoration: none !important;
+}
+
+button{
+  color:white !important;
+}
+
+textarea:focus, input[type="text"]:focus, input[type="password"]:focus, input[type="datetime"]:focus, input[type="email"]:focus, input[type="search"]:focus, input[type="tel"]:focus, input[type="color"]:focus, .uneditable-    input:focus {
+  border-color: white !important;
+  box-shadow: white !important;
+}
+
+.nav-link{
+  color: blue !important;
 }
