changed home and layout and deleted cities

--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,18 @@ body{
   width: 90%;
 }
 
+.chig{
+  margin-top: 5%;
+  width:30%
+}
+.nyc{
+  margin-top: 5%;
+  width:30%
+}.sd{
+  margin-top: 5%;
+  width:30%
+}
+
 h1{
   margin-top: 110%;
   padding: 20px;
