--- a/src/App.css
+++ b/src/App.css
@@ -66,3 +66,16 @@ h1{
   text-align: center;
   padding: 20%;
 }
+
+.chig{
+margin-top: 5%;
+width: 30%;
+}
+.nyc{
+  margin-top: 5%;
+  width: 30%;
+}
+.sd{
+  margin-top: 5%;
+  width: 30%;
+}
