--- a/src/App.css
+++ b/src/App.css
@@ -64,7 +64,7 @@ h1{
   font-size: 27px;
   white-space: 100px;
   text-align: center;
-  padding: 20%;
+  /* padding: 20%; */
 }
 
 .chig{
@@ -78,4 +78,8 @@ width: 30%;
 .sd{
   margin-top: 5%;
   width: 30%;
+}
+
+.home {
+  height: 100vh;
 }
